# unified-lightning-wallet

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/bdk-integration/: Cargo.toml
crates/bdk-integration/src/: lib.rs  wallet.rs
crates/cli/: Cargo.toml
crates/cli/examples/: basic_usage.rs  storage_example.rs
crates/cli/src/: config.rs  main.rs
crates/cli/src/commands/: init.rs  lightning.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  traits.rs  types.rs
crates/ldk-integration/: Cargo.toml
crates/ldk-integration/src/: channels.rs  events.rs  lib.rs  node.rs  payments.rs
crates/storage/: Cargo.toml
crates/storage/src/: database.rs  lib.rs  migrations.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs  protocol.rs
docker/: Dockerfile  README.md  docker-compose.yml
docs/: ARCHITECTURE.md  USER_GUIDE.md
docs/images/: README.md
examples/: basic_usage.rs  storage_example.rs
public-site/: index.html  script.js  styles.css  wallet.html
public-site/images/: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
tests/: lightning_integration.rs
ui/: package-lock.json  package.json
ui/src/: App.tsx  index.css
web-app/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json
web-app/public/: index.html  script.js  wallet.html
web-app/src/: App.css  App.tsx  index.css
