[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/ldk-integration",
    "crates/bdk-integration",
    "crates/storage",
    "crates/sync",
    "crates/cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
authors = ["Chaitanya Kumar <chaitanya21kumar@users.noreply.github.com>"]
repository = "https://github.com/chaitanya21kumar/unified-lightning-wallet"
homepage = "https://github.com/chaitanya21kumar/unified-lightning-wallet"
keywords = ["bitcoin", "lightning", "wallet", "crypto"]
categories = ["cryptography::cryptocurrencies"]

[workspace.dependencies]
# Bitcoin & Lightning Core
lightning = "0.0.125"
lightning-invoice = "0.32"
lightning-net-tokio = "0.0.125"
lightning-persister = "0.0.125"
lightning-background-processor = "0.0.125"
lightning-transaction-sync = "0.0.125"
bdk_wallet = { version = "1.0", features = ["keys-bip39"] }
bdk_chain = "0.18"
bdk_electrum = "0.18"
bdk_esplora = { version = "0.18", features = ["async"] }
bitcoin = { version = "0.32", features = ["serde", "rand"] }
miniscript = "12.0"

# Async Runtime
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"

# Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
dialoguer = "0.11"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Cryptography
rand = "0.8"
bip39 = "2.0"
chacha20poly1305 = "0.10"
argon2 = "0.5"

# Utils
hex = "0.4"
bs58 = "0.5"
chrono = { version = "0.4", features = ["serde"] }

# Testing
proptest = "1.5"
tempfile = "3.13"

# Shared workspace crates
ulw-core = { path = "crates/core" }
ulw-ldk = { path = "crates/ldk-integration" }
ulw-bdk = { path = "crates/bdk-integration" }
ulw-storage = { path = "crates/storage" }
ulw-sync = { path = "crates/sync" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
