[package]
name = "ulw-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ulw"
path = "src/main.rs"

[dependencies]
ulw-core.workspace = true
ulw-bdk.workspace = true
ulw-ldk.workspace = true
ulw-storage.workspace = true
ulw-sync.workspace = true
bitcoin.workspace = true
clap.workspace = true
dialoguer.workspace = true
tokio.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
