[package]
name = "ulw-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
bitcoin.workspace = true
lightning.workspace = true
lightning-invoice.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
hex.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
proptest.workspace = true
