[package]
name = "ulw-ldk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
ulw-core.workspace = true
ulw-storage.workspace = true
lightning.workspace = true
lightning-invoice.workspace = true
lightning-net-tokio.workspace = true
lightning-persister.workspace = true
lightning-background-processor.workspace = true
lightning-transaction-sync.workspace = true
bitcoin.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
rand.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
tempfile.workspace = true
